@@ -15,7 +15,6 @@
 #define CUTSCENE_THEME_BACKGROUND
     [main_map_border]
         border_size = 0.5
-        background_image = "terrain/off-map/background.png~CS(-255,-255,-255)"
         tile_image = "alphamask.png"
         show_border = no
     [/main_map_border]
